Доделал форму - не получается вставить треугольник в сабмите после текста (скопировал из фолиака, но совсем ничего не появляется). Проблему с градиентом решил - вставил градиент только для хедера, а всему боди прописал фон серый.

--- a/index.html
+++ b/index.html
@@ -79,8 +79,12 @@
             <p class="section__info-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
         <form action="#" class="section__form" method="get">
-            <label for="email"></label>
-            <input type="email" name="email" id="email" placeholder="Enter your email address">
+            <label class="form__email">
+                <input type="email" name="email" placeholder="Enter your email address" class="form__email-input">
+            </label>
+            <label class="form__button">
+                <input type="submit" name="enter" value="SUBSCRIBE" class="form__button-input">
+            </label>
         </form>
     </section>
     <footer class="footer">
